# snowball

./: CMakeLists.txt  CMakePresets.json  Makefile  README.md
.devcontainer/: Dockerfile  devcontainer.json
CMakeModules/: nel.cmake
base/: .gitignore  client.cfg  pp_oculus_vr.cg  pp_stereo_debug.cg  pp_test.cg  snowballs_client.cfg  snowballs_client_default.cfg  welcome_service.cfg
base/cfg/: client.cfg  frontend_service.cfg  login.cfg
base/config/: common.toml  login.toml
client/: CMakeLists.txt  animation.cpp  camera.cpp  client.cpp  client.h  commands.cpp  compass.cpp  compass.h  config.h  configuration.cpp  configuration.h  entities.cpp  entities.h  game_time.cpp  graph.cpp  graph.h  interface.cpp  internationalization.cpp  landscape.cpp  landscape.h  lens_flare.cpp  mouse_listener.cpp  mouse_listener.h  network.cpp  network.h  pacs.cpp  pacs.h  physics.h  radar.cpp  radar.h  snowballs_client.cpp  snowballs_client.h  snowballs_config.h  sound.cpp  sound.h
client/src/: animation.h  camera.h  commands.cpp  commands.h  compass.cpp  configuration.cpp  entities.cpp  game_time.cpp  interface.h  landscape.cpp  lens_flare.cpp  lens_flare.h  mouse_listener.cpp  network.cpp  pacs.cpp  physics.cpp  radar.cpp  snowballs_client.cpp  snowballs_config.h  sound.h
config_service/: CMakeLists.txt  config_service.h
config_service/config/: CMakeLists.txt  config_db.h
config_service/config/toml/: CMakeLists.txt  config_toml.cpp  config_toml.h
include/domain/: shard.h  user.h
server/: CMakeLists.txt
server/chat/: CMakeLists.txt  main.cpp
server/cmd/: CMakeLists.txt
server/cmd/login/: CMakeLists.txt  connection_client.cpp  connection_web.cpp  connection_ws.cpp  login.cpp  login.h
server/collision/: CMakeLists.txt  collision_service.h
server/collision/src/: collision_service.cpp
server/empty/src/: empty_service.cpp
server/frontend/: CMakeLists.txt  login_server.cpp  login_server.h  main.cpp  stdnet.h
server/frontend/src/: main.cpp
server/login_service/: CMakeLists.txt  login_service.cpp  login_service.h  shard.cpp  user.cpp
server/login_service/entity/: CMakeLists.txt  shard.h  user.h
server/login_service/storage/: CMakeLists.txt  shard_db.h  user_db.h
server/login_service/storage/memory/: CMakeLists.txt  shard_memory.cpp  shard_memory.h  user_memory.cpp  user_memory.h
server/login_service/storage/sql/: CMakeLists.txt  shard_sql.cpp  shard_sql.h  user_sql.cpp  user_sql.h
server/network_service/: CMakeLists.txt  network_service.cpp  network_service.h
server/network_service/message/: CMakeLists.txt  message_db.h
server/network_service/message/nel/: CMakeLists.txt  nel_message.cpp  nel_message.h
server/position/: CMakeLists.txt  physics.cpp
server/position/src/: main.cpp  physics.h
tests/: CMakeLists.txt
