FILE(GLOB SRC *.cpp *.h)

ADD_EXECUTABLE(chat WIN32 ${SRC})

TARGET_LINK_LIBRARIES(chat
						nelmisc
						nelnet)

NL_DEFAULT_PROPS(chat "Snowballs, Services: Chat")
NL_ADD_RUNTIME_FLAGS(chat)

SET_TARGET_PROPERTIES(chat PROPERTIES
  INSTALL_RPATH "$ORIGIN/lib:$ORIGIN/../lib"
  BUILD_RPATH   "$ORIGIN/lib:$ORIGIN/../lib")

INSTALL(TARGETS chat RUNTIME DESTINATION sbin COMPONENT services)
