FILE(GLOB SRC *.cpp *.h)

ADD_SUBDIRECTORY(memory)
ADD_SUBDIRECTORY(sql)

ADD_LIBRARY(storage STATIC ${SRC})
TARGET_INCLUDE_DIRECTORIES(storage PUBLIC ${CMAKE_CURRENT_SOURCE_DIR})
TARGET_LINK_LIBRARIES(storage PRIVATE storage_memory storage_sql)
SET_TARGET_PROPERTIES(storage PROPERTIES CXX_STANDARD 23 CXX_STANDARD_REQUIRED YES)
